@@ -7,8 +7,8 @@ lambkit-1.0.2:
 新增：新增ApiRoute路由，可直接发布service中的方法
 新增：新增Dubbo实现的RPC功能
 新增：集成zookeeper和consul服务注册和发现功能
-新增: ApiRoute新增拦截器ApiInterceptor、验证器ApiValidator
-新增: ApiRoute新增ApiRender渲染器，可自定义输出方式
+新增：ApiRoute新增拦截器ApiInterceptor、验证器ApiValidator
+新增：ApiRoute新增ApiRender渲染器，可自定义输出方式
 优化：增强LambkitCache能力，增加list、set方式的缓存
 优化：更改Upms缓存方式，可选择LambkitCache和Redis两种方式
 优化：优化CommonUtils工具
@@ -18,6 +18,7 @@ lambkit-1.0.2:
 优化：ehcache升级到2.6.11
 优化：优化网关服务GatewayService
 优化：ApiRoute统一返回接口格式
+优化：ApiValidator验证器通过key直接验证params参数，通过index验证method参数值
 修复：修复generator模板地址错误问题
 修复：修复LambkitApplication.run使用错误问题
 修复：去除com.beust.jcommander.internal包的引用
